# indexsort_impl

./: .clang-format  .gitignore  LICENSE  README.md  meson.build
docs/: Doxyfile.in  main_page.dox  meson.build
include/: base.hpp  boost_index_apply_sort.hpp  boost_index_apply_sort2.hpp  double_sort.hpp  permutate_in_place_sort.hpp  vector_pair_sort.hpp  vector_pair_sort2.hpp
test/: benchmark.cpp  meson.build  test_all.cpp  test_vector_pair_sort.cpp
